unpackaged/main/default/objects/breadwinner_ns__BW_Item_Fulfillment__c/breadwinner_ns__BW_Item_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>NetSuite Fulfillment</label>
    <nameField>
        <label>Ref No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>