unpackaged/main/default/objects/breadwinner_ns__BW_Item_Fulfillment__c/fields/breadwinner_ns__Entity_Company__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Entity_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>breadwinner_ns__BW_Company__c</referenceTo>
    <relationshipLabel>NetSuite Item Fulfillments</relationshipLabel>
    <relationshipName>BWItemFulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>