unpackaged/main/default/objects/breadwinner_ns__BW_Item_Fulfillment__c/fields/breadwinner_ns__ShippingCost__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ShippingCost__c</fullName>
    <label>Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>