unpackaged/main/default/objects/breadwinner_ns__BW_Item_Fulfillment__c/fields/breadwinner_ns__ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ShippingCountry__c</fullName>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>