unpackaged/main/default/objects/breadwinner_ns__BW_Item_Fulfillment__c/fields/breadwinner_ns__ShippingState__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ShippingState__c</fullName>
    <label>Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>