unpackaged/main/default/objects/breadwinner_ns__BW_Item_Fulfillment__c/fields/breadwinner_ns__TranDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__TranDate__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>