unpackaged/main/default/objects/breadwinner_ns__BW_Item_Fulfillment__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__ShipStatus__c</columns>
    <columns>breadwinner_ns__TranDate__c</columns>
    <columns>breadwinner_ns__Entity_Company__c</columns>
    <columns>breadwinner_ns__CreatedFrom__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>